<resources>
    <string name="app_name">NewKhrogaty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Splash-->
    <string name="select_language">Select language</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>

    <!--OnBoarding-->
    <string name="next">Next \u003E</string>
    <string name="prev">\u003C Prev</string>
    <string name="start">Start</string>
    <string name="places_for_going_out">Places For Going Out</string>
    <string name="restaurants_and_coffee">Restaurants &amp; Coffee Shops</string>
    <string name="what_do_i_do">What Do I Do?</string>
    <string name="onboarding_text">Loem is simply dummy text of the project until we find the original text</string>

    <!--Home-->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="find_places">Find Places</string>
    <string name="restaurants">Restaurants</string>
    <string name="things_to_do">Things To Do</string>
    <string name="view_more">View More</string>

    <!--Search-->
    <string name="search_here_by_place">Search here by place</string>
    <string name="search_for_any_place">Search for any places</string>
    <string name="no_items_found">No Item Found</string>

    <!--Restaurants-->
    <string name="rest_coffee">Rest / Coffees</string>
    <string name="all">All</string>
    <string name="coffeeShops">Coffee Shops</string>

    <!--Category-->
    <string name="details">Details</string>

    <!--Details-->
    <string name="more_info">More Information</string>
    <string name="leave_comment">Leave a comment</string>
    <string name="write_here">Write here</string>
    <string name="about">About</string>
    <string name="map">Map</string>
    <string name="default_notification_channel_id">CHANNEL_ID</string>

</resources>
