<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_margin="16dp"
    android:layout_gravity="center"
    android:background="@drawable/select_language_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".languageSelection.LanguageSelectionFragment">

    <TextView
        android:id="@+id/select_language_tv"
        android:text="@string/select_language"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/select_language_tv"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/arabic_btn"
            android:text="@string/arabic"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/start_btn_background"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="4dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/english_btn"
            android:text="@string/english"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:background="@drawable/start_btn_background"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="4dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>