<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.features.settings.SettingsActivity">

    <ImageView
        android:id="@+id/header_img"
        android:src="@drawable/theme_header"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <ImageView
        android:id="@+id/back"
        android:src="@drawable/back"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="@id/header_img"
        app:layout_constraintBottom_toBottomOf="@id/header_img"
        app:layout_constraintStart_toStartOf="@id/header_img"
        android:layout_width="60dp"
        android:layout_height="60dp"/>

    <TextView
        android:text="@string/select_language"
        android:textSize="26sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/header_img"
        app:layout_constraintBottom_toBottomOf="@id/header_img"
        app:layout_constraintStart_toEndOf="@id/back"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/english_btn"
        android:text="@string/english"
        android:gravity="end|center"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:background="@color/white"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/header_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/arabic_btn"
        android:text="@string/arabic"
        android:gravity="start|center"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:background="@color/white"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/english_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>