<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.onboarding.OnBoardingActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/onboarding_viewpager"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/control_layout"
        android:layout_height="0dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/control_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/prev_tv"
            android:text="@string/prev"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:padding="10dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/start_tv"
            android:visibility="gone"
            android:text="@string/start"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:paddingStart="48dp"
            android:paddingEnd="48dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@drawable/start_btn_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/next_tv"
            android:text="@string/next"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>