<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.features.home.homeFragments.search.SearchFragment">


    <ImageView
        android:id="@+id/header_img"
        android:src="@drawable/theme_header"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <TextView
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:fontFamily="@font/happy_times_at_the_ikob_regular"
        app:layout_constraintTop_toTopOf="@id/header_img"
        app:layout_constraintBottom_toBottomOf="@id/header_img"
        app:layout_constraintStart_toStartOf="@id/header_img"
        android:layout_marginStart="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_layout"
        android:background="@drawable/search_background"
        app:layout_constraintTop_toBottomOf="@id/header_img"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:elevation="3dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/search_txt_img"
            android:src="@drawable/search"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10sp"
            android:layout_marginStart="8dp"
            android:layout_width="50dp"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/search_et"
            android:hint="@string/search_here_by_place"
            android:textColorHint="@color/light_gray"
            android:background="@color/transparent"
            app:layout_constraintStart_toEndOf="@id/search_txt_img"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="8dp"
            android:layout_width="0dp"
            android:textSize="14dp"
            android:layout_height="match_parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/nosearch_icon"
        android:src="@drawable/nosearch_icon"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <TextView
        android:id="@+id/search_result_tv"
        android:text="@string/search_for_any_place"
        app:layout_constraintTop_toBottomOf="@id/nosearch_icon"
        app:layout_constraintStart_toStartOf="@id/nosearch_icon"
        app:layout_constraintEnd_toEndOf="@id/nosearch_icon"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recyclerview"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/empty"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/nosearch_icon"
        app:layout_constraintStart_toStartOf="@id/nosearch_icon"
        app:layout_constraintEnd_toEndOf="@id/nosearch_icon"
        android:layout_marginTop="8dp"
        android:text="@string/no_items_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/loading"
        />


</androidx.constraintlayout.widget.ConstraintLayout>