<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.features.home.homeFragments.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/settings_img"
            android:src="@drawable/settings"
            android:elevation="1dp"
            android:padding="15dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/header_img"
            app:layout_constraintBottom_toBottomOf="@id/header_img"
            app:layout_constraintStart_toStartOf="@id/header_img"
            android:layout_width="60dp"
            android:layout_height="60dp"/>

        <ImageView
            android:id="@+id/header_img"
            android:src="@drawable/home_header"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="160dp"/>

        <ImageView
            android:src="@drawable/khrogaty_logo"
            app:layout_constraintTop_toTopOf="@id/header_img"
            app:layout_constraintBottom_toBottomOf="@id/header_img"
            app:layout_constraintStart_toStartOf="@id/header_img"
            app:layout_constraintEnd_toEndOf="@id/header_img"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <ImageView
            android:id="@+id/home_first_icon"
            android:src="@drawable/home_first_icon"
            app:layout_constraintTop_toBottomOf="@id/header_img"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16sp"
            android:layout_marginTop="8dp"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <TextView
            android:id="@+id/places_for_going_out_tv"
            android:text="@string/places_for_going_out"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/happy_times_at_the_ikob_regular"
            app:layout_constraintTop_toTopOf="@id/home_first_icon"
            app:layout_constraintBottom_toBottomOf="@id/home_first_icon"
            app:layout_constraintStart_toEndOf="@id/home_first_icon"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/places_for_going_out_view_more_tv"
            android:text="@string/view_more"
            android:textSize="16sp"
            android:fontFamily="@font/happy_times_at_the_ikob_regular"
            android:textColor="@color/nav_green"
            android:padding="10sp"
            app:layout_constraintTop_toTopOf="@id/home_first_icon"
            app:layout_constraintBottom_toBottomOf="@id/home_first_icon"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/places_for_going_out_recyclerview"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/home_first_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/home_second_icon"
            android:src="@drawable/home_second_icon"
            app:layout_constraintTop_toBottomOf="@id/places_for_going_out_recyclerview"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16sp"
            android:layout_marginTop="8dp"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <TextView
            android:text="@string/restaurants_and_coffee"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/happy_times_at_the_ikob_regular"
            app:layout_constraintTop_toTopOf="@id/home_second_icon"
            app:layout_constraintBottom_toBottomOf="@id/home_second_icon"
            app:layout_constraintStart_toEndOf="@id/home_second_icon"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/restaurants_view_more_tv"
            android:text="@string/view_more"
            android:textSize="16sp"
            android:fontFamily="@font/happy_times_at_the_ikob_regular"
            android:textColor="@color/nav_green"
            android:padding="10sp"
            app:layout_constraintTop_toTopOf="@id/home_second_icon"
            app:layout_constraintBottom_toBottomOf="@id/home_second_icon"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/restaurants_recyclerview"
            app:layout_constraintTop_toBottomOf="@id/home_second_icon"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/home_third_icon"
            android:src="@drawable/home_third_icon"
            app:layout_constraintTop_toBottomOf="@id/restaurants_recyclerview"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16sp"
            android:layout_marginTop="8dp"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <TextView
            android:text="@string/what_do_i_do"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/happy_times_at_the_ikob_regular"
            app:layout_constraintTop_toTopOf="@id/home_third_icon"
            app:layout_constraintBottom_toBottomOf="@id/home_third_icon"
            app:layout_constraintStart_toEndOf="@id/home_third_icon"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/todo_view_more_tv"
            android:text="@string/view_more"
            android:textSize="16sp"
            android:fontFamily="@font/happy_times_at_the_ikob_regular"
            android:textColor="@color/nav_green"
            android:padding="10sp"
            app:layout_constraintTop_toTopOf="@id/home_third_icon"
            app:layout_constraintBottom_toBottomOf="@id/home_third_icon"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todo_recyclerview"
            app:layout_constraintTop_toBottomOf="@id/home_third_icon"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/loading"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>